# proactive-codebase-testing

./: .dockerignore  .gitignore  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_GUIDE.md  Dockerfile  GITHUB_DOCS_UPLOAD_GUIDE.md  LANGKAH_9_12_SUMMARY.md  PUSH_TO_GITHUB.md  README.md  ai-driven-soc-security-assessment.json  ai-driven-soc-security-assessment.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test-directory-analysis.html  test-directory-analysis.json
.claude/: settings.json
.github/workflows/: README_DOCS.md  build.yml  create-docs-release.yml  performance.yml  publish-docs.yml  push-docs-branch.yml  scheduled-scan.yml  security-gate.yml  security-scan.yml  tests.yml  upload-docs-artifacts.yml
docs/: API.md  COMPLETE_DOCUMENTATION.md  DEPLOYMENT.md  INTEGRATION.md
docs-generated/: Proactive_Codebase_Testing_Platform.docx  Proactive_Codebase_Testing_Platform.pptx  ~$Proactive_Codebase_Testing_Platform.pptx
documentation_output/: Proactive_Codebase_Testing_Platform.docx  Proactive_Codebase_Testing_Platform.pptx  README.md
examples/: custom_rules.py  vulnerable_code.py
scripts/: generate_all_docs.py  generate_docs.sh  generate_pptx.py  push-to-github.sh  run_test_analysis.sh  setup-github.sh
src/: __init__.py
src/api/: __init__.py  middleware.py  models.py  routes.py  server.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  analyzer.py  findings.py  logging_config.py  monitoring.py  parser.py  prompts.py
src/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py  sarif_reporter.py
tests/: test_analyzer.py  test_api.py  test_reporters.py
